--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7"
   }
 }
